changing link and config

--- a/_posts/2015-12-05-debate-breaks-calculator-web-version.html
+++ b/_posts/2015-12-05-debate-breaks-calculator-web-version.html
@@ -21,4 +21,4 @@ author:
   first_name: ''
   last_name: ''
 ---
-<p>Easy peasy to use. Check it out <a href="http://nuwandavek.github.io/break-score-calculator/" target="_blank">here</a>.</p>
+<p>Easy peasy to use. Check it out <a href="http://sparshith.github.io/break-score-calculator/" target="_blank">here</a>.</p>
